# sonos_exporter

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
contrib/: sonos-exporter.env.example  sonos-exporter.service
grafana/: sonos-dashboard.json
sonos_exporter/: __init__.py  collector.py  config.py  main.py  metrics.py
tests/: conftest.py  test_collector.py  test_config.py  test_dashboard.py  test_integration.py  test_main.py
