[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonos-exporter"
version = "0.1.0"
description = "Prometheus exporter for Sonos speakers, built on the SoCo library"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "soco>=0.30,<0.32",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
sonos-exporter = "sonos_exporter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sonos_exporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
